new Boolean() -> Boolean.valueOf()